--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela
+    </title>
     <style>
         body{
             height: 100vh;
@@ -12,12 +13,15 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed cover;
 
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             margin: auto;
             padding: 10px;
             border: 1px solid darkblue;
@@ -29,7 +33,8 @@
     <body>
         <main>
         <h1>Teste de imagem no fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo aliquid maiores vitae nihil non doloribus est commodi amet, molestias ratione consectetur neque enim accusantium ex fuga quo natus sequi deserunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odit sunt perferendis iste illo fugiat iusto obcaecati eaque, ad nisi alias iure molestiae, doloribus debitis nobis consectetur nihil! Incidunt, obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, eaque repellendus, quisquam est commodi quae veritatis illum explicabo maxime amet aliquid hic eum deleniti libero nostrum, vero tempore omnis cupiditate Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, nulla! Dolor in aperiam aliquam minima eum laborum minus magni, modi, deleniti vitae nobis? Corrupti rerum nihil eos ut dolores commodi.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo aliquid maiores vitae nihil non doloribus est commodi amet, molestias ratione consectetur neque enim accusantium ex fuga quo natus sequi deserunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odit sunt perferendis iste illo fugiat iusto obcaecati eaque, ad nisi alias iure molestiae, doloribus debitis nobis consectetur nihil! Incidunt, obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, eaque repellendus, quisquam est commodi quae veritatis illum explicabo maxime amet aliquid hic eum deleniti libero nostrum, vero tempore omnis cupiditate Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, nulla! Dolor in aperiam aliquam minima eum laborum minus magni, modi, deleniti vitae nobis? Corrupti rerum nihil eos ut dolores commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, amet soluta officia, nemo quisquam neque nostrum pariatur sapiente ea hic, natus placeat illum ipsam. Consequuntur pariatur harum dolorum tenetur sint Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur sit sint provident, adipisci dolorem facere nesciunt error corrupti quibusdam maiores et, reiciendis modi laboriosam itaque possimus pariatur optio, quasi assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora laudantium excepturi recusandae quidem praesentium veritatis quos corporis minus aliquam nam nostrum reiciendis dolores hic sequi et, qui atque delectus! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, commodi in tempora voluptates nesciunt eum quia ea! Officia maxime perferendis iste excepturi aliquam beatae iure, accusamus similique est explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro libero mollitia enim. Possimus labore, nobis illum quae deserunt quaerat ea velit corrupti voluptatum non aliquid est repellat tenetur! Temporibus, ipsa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta laborum eum perspiciatis, in impedit esse natus vel. Error, voluptatum eius aperiam libero quaerat fugiat provident, enim mollitia beatae ducimus cumque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, pariatur? Placeat itaque esse praesentium repellendus ullam optio, commodi, qui, tenetur exercitationem assumenda totam corporis quaerat cumque iste debitis quos autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quod? Earum in rem dignissimos temporibus commodi repellendus et qui, vero inventore veniam maxime, dicta enim officiis ullam! A, tempora nam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore assumenda animi ipsum exercitationem, ratione amet perspiciatis totam quo molestias voluptate doloribus tenetur adipisci et repellat sit natus fugit, quod nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem necessitatibus ut illo? Similique labore explicabo excepturi iure quisquam minus nulla, harum possimus sed vero laboriosam itaque fuga recusandae, perferendis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque libero, voluptates tempore pariatur debitis possimus ipsa earum obcaecati quam nulla cum laboriosam in aut sed quas asperiores quod aspernatur corporis.
+        </p>
     </main>
 </body>
 </html>
